--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<br>
 		<br>
 		<section id="title">
+		<div class="blocker"> </div>
         <h2>The Macroeconomic Impact of COVID-19 on the United States</h2>
         <p>For the purpose of analyzing the economic impact of the pandemic, we will use April 2020 as a point where the pandemic rapidly spread throughout country and began to cause impacts.
 		</p>
@@ -59,7 +60,7 @@
 		<hr>
 		<section id="summary">
 		<h2>Summary</h2>
-		<p>For the purpose of analyzing the economic impact of the pandemic, we will use April 2020 as a point where the pandemic rapidly spread throughout country and began to cause impacts.
+		<p>As seen in the visualizations, COVID-19 had a significant impact on the United States' economy, causing mass unemployment and reduced domestic business and economic activity. However, it seems that the government has taken quick action to better things which can be seen by rising GDP and USD appreciation a few months after the pandemic's peak of spreading.
 		</p>
 		</section>
 		<br>
